welcome.lessons.welcome.array.basics.Array1.scala.error
Array1:5: error: '<-' expected but ')' found.
  for ( i<=1 to hauteur ){
                        ^Array1:9: error: illegal start of simple expression
}""" 
^Array1:9: error: ';' expected but string literal found.
}""" 
 ^